# project2

./: CMakeLists.txt  README.txt
data/: test_input.json
include/: InputParser.h  OutputGenerator.h  TriangulationInstance.h  TriangulationOptimizer.h  TriangulationResult.h
src/: InputParser.cpp  OutputGenerator.cpp  TriangulationOptimizer.cpp  main.cpp
